--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -25,17 +25,17 @@
         [pageSwitcher]="false">
         <div class="flex flex-row">
             <ng-container *ngTemplateOutlet="longTermScene"></ng-container>
-            <div class="w-2/4 relative h-80 hero-scene" [heroImg]="heroImg" [heroScene]="HeroScene.LONGTERM"
+            <div class="w-2/4 relative h-80 hero-scene" [heroImg]="heroImg()" [heroScene]="HeroScene().LONGTERM"
                 (heroChanged)="toggleHero()"></div>
         </div>
         <div class="flex flex-row">
             <ng-container *ngTemplateOutlet="shortTermScene"></ng-container>
-            <div class="w-2/4 relative h-80 hero-scene" [heroImg]="heroImg" [heroScene]="HeroScene.COUNSEL"
+            <div class="w-2/4 relative h-80 hero-scene" [heroImg]="heroImg()" [heroScene]="HeroScene().COUNSEL"
                 (heroChanged)="toggleHero()"></div>
         </div>
         <div class="flex flex-row">
             <ng-container *ngTemplateOutlet="researchScene"></ng-container>
-            <div class="w-2/4 relative h-80 hero-scene" [heroScene]="HeroScene.RESEARCH"></div>
+            <div class="w-2/4 relative h-80 hero-scene" [heroScene]="HeroScene().RESEARCH"></div>
         </div>
     </div>
     }
@@ -43,7 +43,7 @@
 
 <div #longTermMobile class="lg:hidden">
     @defer (on viewport(longTermMobile)) {
-    <div class="w-full relative h-80 hero-scene" [heroImg]="heroImg" [heroScene]="HeroScene.LONGTERM"
+    <div class="w-full relative h-80 hero-scene" [heroImg]="heroImg()" [heroScene]="HeroScene().LONGTERM"
         (heroChanged)="toggleHero()" [autoRestartInterval]="20000"></div>
     <ng-container *ngTemplateOutlet="longTermScene"></ng-container>
     }
@@ -51,7 +51,7 @@
 
 <div #counselMobile class="lg:hidden">
     @defer (on viewport(counselMobile)) {
-    <div class="w-full relative h-80 hero-scene" [heroImg]="heroImg" [heroScene]="HeroScene.COUNSEL"
+    <div class="w-full relative h-80 hero-scene" [heroImg]="heroImg()" [heroScene]="HeroScene().COUNSEL"
         (heroChanged)="toggleHero()"></div>
     <ng-container *ngTemplateOutlet="shortTermScene"></ng-container>
     }
@@ -59,13 +59,13 @@
 
 <div #longTermMobile class="lg:hidden">
     @defer (on viewport(longTermMobile)) {
-    <div class="w-full relative h-80 hero-scene" [heroScene]="HeroScene.RESEARCH" [autoRestartInterval]="20000"></div>
+    <div class="w-full relative h-80 hero-scene" [heroScene]="HeroScene().RESEARCH" [autoRestartInterval]="20000"></div>
     <ng-container *ngTemplateOutlet="researchScene"></ng-container>
     }
 </div>
 
 <div class="hero-section w-full mt-10 text-center md:text-left" [background]="'assets/bg-planning.jpg'"
-    [references]="references[HeroSection.PLANNING]">
+    [references]="references()[HeroSection().PLANNING]">
     <h1 class="text-2xl md:text-3xl">Planning first</h1>
     <p class="md:text-lg xl:text-xl">Every long-lasting product has a well-designed, solid plan behind it. Software is no exception. My workflow always starts with proper preparations and planning, resulting in:</p>
     <ul class="md:text-lg xl:text-xl list-disc ps-8">
@@ -84,7 +84,7 @@
             href="https://unsplash.com/photos/person-drafting-on-blueprint--FPFq_trr2Y?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></span>
 </div>
 
-<div class="hero-section w-full mt-10 text-center md:text-left" [background]="'assets/bg-spatial.jpg'" [flip]="true" [references]="references[HeroSection.SPATIAL]">
+<div class="hero-section w-full mt-10 text-center md:text-left" [background]="'assets/bg-spatial.jpg'" [flip]="true" [references]="references()[HeroSection().SPATIAL]">
     <h1 class="text-2xl md:text-3xl">Spatially enabled</h1>
     <p class="md:text-lg xl:text-xl pb-4">Have you ever considered how our reliance on digital maps and navigation systems has increased in the past few decades? With the explosive revolution of digitalization and informatics ceasing into basic literacy in business and everyday life, new trends are emerging in the IT field. As spatial algorithms and systems become more common, our location awareness is also firmly increasing. Spatiality is slowly becoming an essential part of decision-making and business intelligence.</p>
     <p class="md:text-lg xl:text-xl">Having a PhD done around Web-based GIS (Geographic Information Systems), spatial problems won't cause any roadblocks. From creating traditional GIS models to planning and creating complete Web GIS solutions, I'm capable and happy to help.</p>
@@ -94,7 +94,7 @@
             href="https://unsplash.com/photos/person-holding-red-round-medication-pill-Z8UgB80_46w?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></span>
 </div>
 
-<div class="hero-section w-full my-10 text-center md:text-left" [background]="'assets/bg-science.jpg'" [references]="references[HeroSection.SCIENCE]">
+<div class="hero-section w-full my-10 text-center md:text-left" [background]="'assets/bg-science.jpg'" [references]="references()[HeroSection().SCIENCE]">
     <h1 class="text-2xl md:text-3xl">Based in science</h1>
     <p class="md:text-lg xl:text-xl">What my days in research taught me is every complicated problem has a unique optimal solution. While optimal is usually unfeasible to pursue in business scenarios, it is always good to try and approximate it with critical thinking and holistic evaluation. Computer science students sometimes ask me: what good can an MSc in geography do for you? Well, for example, the ability to think critically and evaluate problems from a holistic view.</p>
     <ul class="md:text-lg xl:text-xl list-disc ps-8">
@@ -108,7 +108,7 @@
             href="https://unsplash.com/photos/a-red-and-black-pattern-with-a-yellow-line-going-through-it-aqNdl7mlMHg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></span>
 </div>
 
-<div class="hero-section w-full mt-10 text-center md:text-left" [background]="'assets/bg-lecture.jpg'" [flip]="true" [references]="references[HeroSection.TEACHING]">
+<div class="hero-section w-full mt-10 text-center md:text-left" [background]="'assets/bg-lecture.jpg'" [flip]="true" [references]="references()[HeroSection().TEACHING]">
     <h1 class="text-2xl md:text-3xl">Love to share</h1>
     <p class="md:text-lg xl:text-xl pb-4">With a teaching history of almost a decade, mostly pivoting around teaching cutting-edge software development and architecture to international computer science bachelor candidates, quality mentoring is always in the picture.</p>
     <p class="md:text-lg xl:text-xl">Finding teaching methods providing the best value in such a practice-oriented, progressive field is a big challenge. My teaching habits, both in and out of the university, are based on experience rather than textbooks. Material is created and adjusted on the go and tries to encompass both the most recent trends and my most recent experience with patterns and best practices.</p>
@@ -123,7 +123,7 @@
     <div class="w-full lg:w-2/4 p-6 text-center lg:text-left">
         <h1 class="text-2xl md:text-3xl xl:text-4xl lg:text-left">Your destiny awaits</h1>
         <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">As the leader of a high-tech SME, you are on the verge of joining the big leagues. You realize the competencies your company will need to scale and wonder how you should build your team up. Let me help you make this process as pleasant as it can be.</p>
-        <a class="btn md:text-lg xl:text-xl" [href]="'/' + PageUrlMapping.PARTNERSHIP">How it works?</a>
+        <a class="btn md:text-lg xl:text-xl" [href]="'/' + PageUrlMapping().PARTNERSHIP">How it works?</a>
     </div>
 </ng-template>
 
@@ -131,7 +131,7 @@
     <div class="w-full lg:w-2/4 p-6 text-center lg:text-left">
         <h1 class="text-2xl md:text-3xl xl:text-4xl lg:text-left">Just a stretch</h1>
         <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">Sometimes, everyone needs a little help, regardless if you are directing a multinational company, a small family business, or a particle collider. If you need a quick look at a software issue from an outside expert, make sure to reach out.</p>
-        <a class="btn md:text-lg xl:text-xl" [href]="'/' + PageUrlMapping.COUNSELING">Looking for a counsel?</a>
+        <a class="btn md:text-lg xl:text-xl" [href]="'/' + PageUrlMapping().COUNSELING">Looking for a counsel?</a>
     </div>
 </ng-template>
 
@@ -139,6 +139,6 @@
     <div class="w-full lg:w-2/4 p-6 text-center lg:text-left">
         <h1 class="text-2xl md:text-3xl xl:text-4xl lg:text-left">STEMming from academia</h1>
         <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">Most of the complex IT problems have unique optimal solutions with slightly different design patterns. However, there is a single common rule for every issue: the best method is the scientific method.</p>
-        <a class="btn md:text-lg xl:text-xl" [href]="'/' + PageUrlMapping.ABOUT">Read more</a>
+        <a class="btn md:text-lg xl:text-xl" [href]="'/' + PageUrlMapping().ABOUT">Read more</a>
     </div>
 </ng-template>
