--- a/src/pages/counseling/counseling.page.html
+++ b/src/pages/counseling/counseling.page.html
@@ -6,10 +6,10 @@
 
         <div
             class="grid grid-rows-5 grid-cols-1 sm:grid-cols-2 sm:grid-rows-3 lg:grid-cols-3 lg:grid-rows-2 xl:grid-cols-5 xl:grid-rows-1 text-primary gap-y-12 pb-12">
-            <div class="card h-64 w-56 justify-self-center" [color]="cardColors[0]">
+            <div class="card h-64 w-56 justify-self-center" [color]="cardColors()[0]">
                 <div faceUp class="flex flex-col items-center text-center justify-between h-full">
                     <h1 class="text-xl uppercase pt-10">Software architecture</h1>
-                    <fa-icon class="pb-20" size="2xl" [icon]="faCompassDrafting"></fa-icon>
+                    <fa-icon class="pb-20" size="2xl" [icon]="faCompassDrafting()"></fa-icon>
                 </div>
                 <div faceDown class="h-full text-xl flex items-center">
                     <ul class="leading-loose text-center w-full">
@@ -20,10 +20,10 @@
                 </div>
             </div>
 
-            <div class="card h-64 w-56 justify-self-center" [color]="cardColors[1]">
+            <div class="card h-64 w-56 justify-self-center" [color]="cardColors()[1]">
                 <div faceUp class="flex flex-col items-center text-center justify-between h-full">
                     <h1 class="text-xl uppercase pt-10">Web development</h1>
-                    <fa-icon class="pb-20" size="2xl" [icon]="faGlobe"></fa-icon>
+                    <fa-icon class="pb-20" size="2xl" [icon]="faGlobe()"></fa-icon>
                 </div>
                 <div faceDown class="h-full text-xl flex items-center">
                     <ul class="leading-loose text-center w-full">
@@ -35,10 +35,10 @@
                 </div>
             </div>
 
-            <div class="card h-64 w-56 justify-self-center" [color]="cardColors[2]">
+            <div class="card h-64 w-56 justify-self-center" [color]="cardColors()[2]">
                 <div faceUp class="flex flex-col items-center text-center justify-between h-full">
                     <h1 class="text-xl uppercase pt-10">UI/UX</h1>
-                    <fa-icon class="pb-20" size="2xl" [icon]="faDisplay"></fa-icon>
+                    <fa-icon class="pb-20" size="2xl" [icon]="faDisplay()"></fa-icon>
                 </div>
                 <div faceDown class="h-full text-xl flex items-center">
                     <ul class="leading-loose text-center w-full">
@@ -49,10 +49,10 @@
                 </div>
             </div>
 
-            <div class="card h-64 w-56 justify-self-center" [color]="cardColors[3]">
+            <div class="card h-64 w-56 justify-self-center" [color]="cardColors()[3]">
                 <div faceUp class="flex flex-col items-center text-center justify-between h-full">
                     <h1 class="text-xl uppercase pt-10">Infrastructure</h1>
-                    <fa-icon class="pb-20" size="2xl" [icon]="faSitemap"></fa-icon>
+                    <fa-icon class="pb-20" size="2xl" [icon]="faSitemap()"></fa-icon>
                 </div>
                 <div faceDown class="h-full text-xl flex items-center">
                     <ul class="leading-loose text-center w-full">
@@ -64,10 +64,10 @@
                 </div>
             </div>
 
-            <div class="card h-64 w-56 sm:col-span-2 lg:col-span-1 justify-self-center" [color]="cardColors[4]">
+            <div class="card h-64 w-56 sm:col-span-2 lg:col-span-1 justify-self-center" [color]="cardColors()[4]">
                 <div faceUp class="flex flex-col items-center text-center justify-between h-full">
                     <h1 class="text-xl uppercase pt-10">Project management</h1>
-                    <fa-icon class="pb-20" size="2xl" [icon]="faListCheck"></fa-icon>
+                    <fa-icon class="pb-20" size="2xl" [icon]="faListCheck()"></fa-icon>
                 </div>
                 <div faceDown class="h-full text-xl flex items-center">
                     <ul class="leading-loose text-center w-full">
@@ -103,7 +103,7 @@
             </ul>
         </div>
 
-        <div class="col-decorated text-lg pb-12" [references]="references[Section.WEB]">
+        <div class="col-decorated text-lg pb-12" [references]="references()[Section().WEB]">
             <h1 class="text-center">Web development</h1>
             <p class="pb-6">As my oldest skill, my seniority in software development is deeply rooted in web
                 development.
@@ -124,7 +124,7 @@
             </ul>
         </div>
 
-        <div class="col-decorated text-lg pb-12" [references]="references[Section.UIUX]">
+        <div class="col-decorated text-lg pb-12" [references]="references()[Section().UIUX]">
             <h1 class="text-center">UI/UX</h1>
             <p class="pb-6">I like to create clean and intuitive user interfaces. While not a creative myself, I have
                 plenty
@@ -149,7 +149,7 @@
             </ul>
         </div>
 
-        <div class="col-decorated text-lg pb-12" [references]="references[Section.INFRASTRUCTURE]">
+        <div class="col-decorated text-lg pb-12" [references]="references()[Section().INFRASTRUCTURE]">
             <h1 class="text-center">Infrastructure</h1>
             <p class="pb-6">Infrastructure is not my strongest suit. Not because I'm bad at it, I'm only not so
                 interested
@@ -172,7 +172,7 @@
             </ul>
         </div>
 
-        <div class="col-decorated text-lg pb-12" [references]="references[Section.PM]">
+        <div class="col-decorated text-lg pb-12" [references]="references()[Section().PM]">
             <h1 class="text-center">Project management</h1>
             <p class="pb-6">I really like Agile. I like how early it recognized the importance of breaking up with
                 traitional business-to-customer behavior in software development in favor of a client-centric one.
@@ -200,7 +200,7 @@
     <section>
         <h1 class="px-6 md:px-0 lg:text-3xl lg:pb-12">Terms and conditions</h1>
         <div class="w-full bg-primary-accent rounded-lg flex justify-center mb-4">
-            <fa-icon class="text-primary py-4" [icon]="faFileContract" size="2xl"></fa-icon>
+            <fa-icon class="text-primary py-4" [icon]="faFileContract()" size="2xl"></fa-icon>
         </div>
         <p class="md:text-lg pb-6 px-6 md:px-0">For occasional counsel, I don't require any formal papers. For
             short-term
@@ -213,7 +213,7 @@
         </p>
 
         <div class="w-full bg-primary-accent rounded-lg flex justify-center mb-4">
-            <fa-icon class="text-primary py-4" [icon]="faMoneyBillWave" size="2xl"></fa-icon>
+            <fa-icon class="text-primary py-4" [icon]="faMoneyBillWave()" size="2xl"></fa-icon>
         </div>
         <p class="md:text-lg pb-12 px-6 md:px-0">Counsels and short-term projects are billed on a project basis. We
             agree on
