--- a/src/pages/web-mapping/sandbox/sandbox.page.html
+++ b/src/pages/web-mapping/sandbox/sandbox.page.html
@@ -3,23 +3,23 @@
         <span class="cabin-sketch text-2xl">CartoSandbox</span>
     </nav>
     <div class="h-full hidden lg:flex items-center gap-6 mr-4">
-        @if (canDelete) {
-        <fa-icon [icon]="faTrash" title="Delete current snippet" class="cursor-pointer text-red-700" (click)="deleteSnippet()" />
+        @if (canDelete()) {
+        <fa-icon [icon]="faTrash()" title="Delete current snippet" class="cursor-pointer text-red-700" (click)="deleteSnippet()" />
         }
-        <fa-icon [icon]="faFloppyDisk" title="Save as new snippet" class="cursor-pointer"
+        <fa-icon [icon]="faFloppyDisk()" title="Save as new snippet" class="cursor-pointer"
             (click)="openSaveDialog()" />
         <select [reset]="'0'" (change)="loadCodeSnippetAsync($event.target)" class="w-48 text-ellipsis overflow-x-hidden">
             <option value="0" class="text-gray-400">Load snippet</option>
             <ng-container
-                *ngTemplateOutlet="loadCodeOptions; context: { items: this.availableCodes[this.library]?.children }" />
+                *ngTemplateOutlet="loadCodeOptions; context: { items: this.availableCodes()[this.library]?.children }" />
         </select>
         <div class="flex items-center select-none cursor-pointer" (click)="runCode()" (keypress)="runCode()" tabindex="0">
-            <fa-icon [icon]="faPlay" class="text-green-900 pr-2" size="1x" />
+            <fa-icon [icon]="faPlay()" class="text-green-900 pr-2" size="1x" />
             <span>Run code</span>
         </div>
         <select [(ngModel)]="library" class="w-48">
-            @for (library of WebMappingLibrary | keyvalue; track library.key) {
-            <option [value]="library.value">{{library.value}} (v{{libraryVersions[library.value]}})</option>
+            @for (library of WebMappingLibrary() | keyvalue; track library.key) {
+            <option [value]="library.value">{{library.value}} (v{{libraryVersions()[library.value]}})</option>
             }
         </select>
     </div>
@@ -28,9 +28,9 @@
     <div class="no-phone px-6 w-full lg:hidden flex flex-col items-center" [minWidth]="1024"></div>
     <div #sandboxContent class="hidden lg:flex flex-row w-full h-full">
         @defer (on viewport(sandboxContent)) {
-        <div class="code-editor w-1/2 h-full" [definitions]="extraTypes" [(value)]="currentCode"></div>
+        <div class="code-editor w-1/2 h-full" [definitions]="extraTypes()" [(value)]="currentCode"></div>
         <div class="w-1/2 h-full">
-            <iframe #webMap class="w-full h-full" [src]="webMapUrl"></iframe>
+            <iframe #webMap class="w-full h-full" [src]="webMapUrl()"></iframe>
         </div>
         }
     </div>
