--- a/src/pages/web-mapping/feature-matrix/feature-matrix.page.html
+++ b/src/pages/web-mapping/feature-matrix/feature-matrix.page.html
@@ -189,7 +189,7 @@
 
     <p class="py-6">If you find any error in the table or would like to extend the matrix, feel free to contact me or
         open an issue on GitHub. The raw support matrix can be downloaded from
-        <a href="/assets/web-mapping/support-matrix.csv">here</a>.
+        <a class="underline" href="/assets/web-mapping/support-matrix.csv">here</a>.
     </p>
 </div>
 
