--- a/src/pages/partnership/partnership.page.html
+++ b/src/pages/partnership/partnership.page.html
@@ -4,7 +4,8 @@
             company. You have the fundamental building blocks in place. You have working management, a network of
             possible partners, and sources for funding. What next?</p>
         <div class="jigsaw-container relative flex justify-center items-center">
-            <img class="h-96" src="/assets/longterm-puzzle-bg.svg" [ngClass]="{'invisible': !puzzleComplete()}" alt="Puzzle completed">
+            <img class="h-96" src="/assets/longterm-puzzle-bg.svg" [ngClass]="{'invisible': !puzzleComplete()}"
+                alt="Puzzle completed">
             <div class="absolute h-full w-full top-0 left-0 flex justify-center items-center"
                 [ngClass]="{'opacity-0': puzzleComplete()}">
                 <div class="jigsaw h-full" image="/assets/longterm-puzzle-active.svg" [columns]="4" [rows]="3"
@@ -135,6 +136,18 @@
     </section>
 
     <section>
+        <h1 class="px-6 md:px-0 lg:text-3xl lg:pb-6">Philosophy</h1>
+        <p class="md:text-lg pb-12 px-6 md:px-0">It is essential to understand that there is a philosophical reason
+            behind my careful selection of long-term partners. I am not in the money game; I am in the happiness game. I
+            consider money as secondary, one barter among many, which can be traded for happiness. My goal is to
+            maximize happiness, and it has many ways. A better UX can bring some joy to plenty of people, while creating
+            a more livable working environment can do significant improvements to the lives of a few. While it's not my
+            job to revolutionize anything in your company, if we partner up, I will be there to help, not just as a
+            code-writing ghost partner. I will be present with my constant critical thinking, putting maximum effort
+            into improving everything you are open to improving. Consequently, to do this correctly, I must know how our
+            goals are aligning and if our partnership has the potential of making the world a better place.
+        </p>
+
         <h1 class="px-6 md:px-0 lg:text-3xl lg:pb-6">Accountability</h1>
         <div class="w-full bg-primary-accent rounded-lg flex justify-center mb-4">
             <fa-icon class="text-primary py-4" [icon]="faHandshake()" size="2xl"></fa-icon>
@@ -177,6 +190,6 @@
             partners fluent in English or Hungarian.</p>
     </section>
 
-    <h1 class="px-6 md:px-0 lg:text-3xl lg:pb-6 text-center">Current long-term partners: 2/2</h1>
+    <h1 class="px-6 md:px-0 lg:text-3xl lg:pb-6 text-center">Current long-term partners: 4/4</h1>
     <h1 class="px-6 md:px-0 lg:text-3xl lg:pb-6 text-center">Estimated vacancy: 2027 Q3</h1>
 </div>
