Adjust partnership and counseling pages

--- a/src/pages/counseling/counseling.page.html
+++ b/src/pages/counseling/counseling.page.html
@@ -90,16 +90,16 @@
         <div class="col-decorated text-lg pb-12">
             <h1 class="text-center">Software architecture</h1>
             <p class="pb-2">Albeit the most recent, this is my most popular and treasured skill to my business partners.
-                I'm
-                not considering myself a senior software architect yet. However, this is the field where most of my
-                daily
-                work pivots around, and therefore, experience builds up rapidly. In this field, I can help you with:</p>
+                This is the field where most of my daily work pivots around, and therefore, experience builds up
+                rapidly. While I firmly believe system and software architecture are inseparable, I mainly focus on
+                software architecture and consider myself a software architect. In this field, I can help you with:</p>
             <ul class="list-disc pl-12">
                 <li>Planning new software components.</li>
                 <li>Creating, modifying, extending plan documentation.</li>
                 <li>Redesigning software architecture into a scalable form.</li>
                 <li>Writing and reviewing specifications.</li>
                 <li>Spatial algorithms and GIS software structure.</li>
+                <li>Creating CI/CD workflows for testing architectural integrity with fitness functions.</li>
             </ul>
         </div>
 
@@ -136,11 +136,10 @@
                 the more damage you can do without noticing. Therefore, my most important rule in UI/UX design is:
                 always
                 satisfy and never exploit.</p>
-            <p class="pb-6">I usually move on the Bootstrap - Tailwind axis when creating web interfaces. If there are
-                no
-                design plans available, I like to customize Bootstrap UI elements. If there are design plans or more
-                complicated ideas, I usually stick with Tailwind. Also, I'm looking forward to trying Web Awesome for
-                template UIs. In this area, I can help you with:</p>
+            <p class="pb-6">I usually move on the Design Toolkit - Tailwind axis when creating web interfaces. If there
+                are no design plans available, I like to customize elements from a design toolkit (e.g. Bootstrap UI).
+                If there are design plans or more complicated ideas, I usually stick with Tailwind. In this area, I can
+                help you with:</p>
             <ul class="list-disc pl-12">
                 <li>Implementing design (especially Figma) plans.</li>
                 <li>Creating clean and maintainable mobile-first responsive web UIs.</li>
@@ -185,7 +184,8 @@
                 management should be done with an IT background.</p>
             <p class="pb-6">While project management is not something I would like to ever do full-time, I find value
                 and
-                satisfaction in teaching how to use version control properly with git. This not only includes proper
+                satisfaction in teaching how to use its tools efficiently, like version control with git. This not only
+                includes proper
                 collaboration techniques (like rebasing) but also using git-flow, semantic versioning, and creating a
                 maintainable product lifecycle. In this area, I can help you with the following:</p>
             <ul class="list-disc pl-12">
