--- a/src/pages/partnership/partnership.page.html
+++ b/src/pages/partnership/partnership.page.html
@@ -143,7 +143,7 @@
             maximize happiness, and it has many ways. A better UX can bring some joy to plenty of people, while creating
             a more livable working environment can do significant improvements to the lives of a few. While it's not my
             job to revolutionize anything in your company, if we partner up, I will be there to help, not just as a
-            code-writing ghost partner. I will be present with my constant critical thinking, putting maximum effort
+            code-writing subcontractor. I will be present with my constant critical thinking, putting maximum effort
             into improving everything you are open to improving. Consequently, to do this correctly, I must know how our
             goals are aligning and if our partnership has the potential of making the world a better place.
         </p>
